hphp/hack/test/typecheck/constraint_gen_fail2.php.exp
File "constraint_gen_fail2.php", line 21, characters 12-17:
Some type constraint(s) here are violated (Typing[4110])
File "constraint_gen_fail2.php", line 16, characters 22-22:
'T' is a constrained type
File "constraint_gen_fail2.php", line 16, characters 19-19:
This is an object of type A
File "constraint_gen_fail2.php", line 21, characters 12-17:
It is incompatible with a string
